--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=hexabank
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hexa_db
+spring.datasource.username=root
+spring.datasource.password=senha123
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show_sql=true
